<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AriseProject1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_radar">RadarActivity</string>
    <string name="btn_send_message">Send Message</string>
    <string name="cd">image</string>

    <!-- Action Bar action items -->
    <string name="action_more">More</string>
    <string name="action_log_out">Log out</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>

    <!-- Search -->
    <string name="search_hint">Search color..</string>
    <string name="title_activity_index">IndexActivity</string>

    <!-- Index Activity -->
    <string name="register">Register</string>
    <string name="log_in">Log in</string>

    <!-- Register Activity -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="email_error">This email is already registered!</string>
    <string name="device_error">The current email account associated with this Device Settings is already registered with us!</string>
    <string name="password">Password</string>
    <string name="title_activity_registration_result">RegistrationResultActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_map">MapActivity</string>

    <!-- Chat Activity -->
    <string name="add_new">+</string>
    <string name="message">Message</string>
    <string name="send">Send</string>

    <!-- Dialog -->
    <string name="cancel">Cancel</string>
    <string name="look">Look</string>
    <string name="add">Add</string>

    <!-- Fragment -->
    <string name="name">Name</string>
    <string name="lkl">Last Known Location</string>
    <string name="get">Get</string>
    <string name="uml">Update My Location</string>
    <string name="pwcsml">People who can see my location</string>
    <string name="add_new_user">Add new</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_forgot_password_result">ForgotPasswordResultActivity</string>
    <string name="select">Select Picture</string>
    <string name="upload">Upload</string>
    <string name="remove">Remove</string>

    <!-- Forgot Password Activity -->
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="account_email_address">Account Email Address</string>

    <!-- Forgot Password Result Activity -->
    <string name="reset_password_link_sent">A link to reset your account password is sent to this email id - </string>

    <!-- Settings Activity -->
    <string name="change_password">Change Password</string>
    <string name="unregister">Unregister</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="password_does_not_match">^ Password does not match!</string>
    <string name="change">Change</string>
    <string name="title_activity_change_picture">ChangePictureActivity</string>

</resources>
