<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".ChangePictureActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView_change_picture_activity_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/default_image" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_change_picture_activity_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_send_button"
            android:text="@string/select"
            android:textColor="@color/WHITE" />

        <Button
            android:id="@+id/button_change_picture_activity_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/selector_send_button"
            android:text="@string/upload"
            android:textColor="@color/WHITE" />

        <Button
            android:id="@+id/button_change_picture_activity_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/selector_send_button"
            android:text="@string/cancel"
            android:textColor="@color/WHITE" />
    </LinearLayout>

</LinearLayout>